# python_project_generator

./: .pre-commit-config.yaml  README.md  pyproject.toml  run.sh
.github/workflows/: build-test.yaml  create-or-update-repo.yaml
tests/functional_tests/: test__generate_project.py
{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  Jenkinsfile  pyproject.toml  run.sh
{{cookiecutter.repo_name}}/.github/workflows/: build-test-publish.yaml
